# session-timer

./: .gitignore  CMakeLists.txt  README.md
cmake/cppnetlib/: cppnetlibConfig.cmake  cppnetlibConfigVersion.cmake  cppnetlibTargets-none.cmake  cppnetlibTargets.cmake
debian/: changelog  control  copyright
src/: CMakeLists.txt  countdown.1  countwindow.cc  countwindow.hh  gnome-sessionmanager.hh  idle.hh  main.cc  xfce-sessionmanager.hh  xfce-sessionmanager.xml
src/countdown/: CMakeLists.txt  countdown.css.in  countwindow.cc  countwindow.hh  gnome-sessionmanager.xml  idle.cc  main.cc  xfce-sessionmanager.xml
src/manager/: CMakeLists.txt  main.cc  null_deleter.hh  poller.cc  poller.hh  robustchild.cc  robustchild.hh  signalfd.cc  signalfd.hh  state.cc  state.hh
src/welcome/: CMakeLists.txt  main.cc  welcome.css  welcome.css.in  welcomewindow.cc  welcomewindow.hh
